# RoboNav

./: README.md
turtlebot3_ddpg/: CMakeLists.txt
turtlebot3_ddpg/launch/: result_graph.launch  turtlebot3_ddpg_torch.launch  turtlebot3_house.launch
turtlebot3_ddpg/nodes/: agent_ddpg.py  turtlebot3_ddpg_torch.py
turtlebot3_ddpg/save_model_ddpg/: save.py
turtlebot3_ddpg/save_model_ddpg/2020_11_26-14_49_58/: stage_1.1_100actor.pth  stage_1.1_100critic.pth  stage_1.1_200actor.pth  stage_1.1_200critic.pth  stage_1.1_400critic.pth  stage_1_1000actor.pth  stage_1_100actor.pth  stage_1_1050actor.pth  stage_1_1100actor.pth  stage_1_1150actor.pth  stage_1_1150critic.pth  stage_1_1200critic.pth  stage_1_1300critic.pth  stage_1_1400critic.pth  stage_1_1450actor.pth  stage_1_1450critic.pth  stage_1_1500critic.pth  stage_1_1550actor.pth  stage_1_1650actor.pth  stage_1_1700critic.pth  stage_1_200critic.pth  stage_1_250actor.pth  stage_1_300actor.pth  stage_1_350actor.pth  stage_1_350critic.pth  stage_1_400critic.pth  stage_1_450actor.pth  stage_1_450critic.pth  stage_1_500actor.pth  stage_1_50critic.pth  stage_1_600actor.pth  stage_1_600critic.pth  stage_1_650actor.pth  stage_1_700actor.pth  stage_1_700critic.pth  stage_1_800actor.pth  stage_1_800critic.pth  stage_1_850actor.pth  stage_1_900critic.pth  stage_1_950actor.pth  (+1 more)
turtlebot3_ddpg/save_model_ddpg/2020_11_27-15_37_48/: stage_1_10_actor.pth  stage_1_10_critic.pth  stage_1_12_critic.pth  stage_1_4_actor.pth  stage_1_6_critic.pth  stage_1_8_actor.pth
turtlebot3_ddpg/save_model_ddpg/2020_11_27-22_09_07/: stage_1_100_critic.pth  stage_1_150_critic.pth  stage_1_300_actor.pth  stage_1_300_critic.pth  stage_1_350_actor.pth  stage_1_350_critic.pth  stage_1_400_critic.pth  stage_1_450_critic.pth  stage_1_50_critic.pth  stage_1_550_actor.pth  stage_1_600_critic.pth  stage_1_650_critic.pth  stage_1_700_actor.pth  stage_1_750_critic.pth  stage_1_800_actor.pth  stage_1_800_critic.pth  stage_1_850_actor.pth  stage_1_850_critic.pth  stage_1_900_actor.pth
turtlebot3_ddpg/save_model_ddpg/2020_11_28-06_24_39/: stage_1_100_actor.pth  stage_1_100_critic.pth  stage_1_50_actor.pth  stage_1_50_critic.pth
turtlebot3_ddpg/save_model_ddpg/2020_11_28-06_59_58/: stage_1_100_actor.pth  stage_1_100_critic.pth  stage_1_150_actor.pth  stage_1_150_critic.pth  stage_1_200_actor.pth  stage_1_200_critic.pth  stage_1_250_actor.pth  stage_1_250_critic.pth  stage_1_300_actor.pth  stage_1_300_critic.pth  stage_1_350_actor.pth  stage_1_350_critic.pth  stage_1_400_actor.pth  stage_1_400_critic.pth  stage_1_450_actor.pth  stage_1_450_critic.pth  stage_1_500_actor.pth  (+5 more)
(+1499 files in other folders)
